// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Container Centered Content 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds bkEkLP sc-tQuYZ lpiIIT sc-dSuTWQ gvFvHw"
    >
      <h3
        class="sc-ciZhAO btUqKl sc-jdAMXn iwAvbM"
      >
        I am in a container
      </h3>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Container Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds bkEkLP sc-tQuYZ iejtYQ sc-dSuTWQ gvFvHw"
    >
      <h3
        class="sc-ciZhAO btUqKl sc-jdAMXn iwAvbM"
      >
        I am in a container
      </h3>
    </div>
  </div>
</div>
`;
